feat(report): Add expandable cards and improve UI colors

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -117,6 +117,7 @@
     "step5Point1": "Use layers of gravel, sand, and charcoal to purify the water before storage.",
     "step6Title": "Install Storage Tank",
     "step6Point1": "Choose a tank size based on your rooftop area and local rainfall patterns.",
-    "step6Point2": "Ensure the tank is covered to prevent algae growth and mosquito breeding."
-
+    "step6Point2": "Ensure the tank is covered to prevent algae growth and mosquito breeding.",
+    "logInWithGoogle": "Log in with Google",
+    "bestStructure": "Best Structure"
 }
