--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -117,5 +117,7 @@
     "step5Point1": "भंडारण से पहले पानी को शुद्ध करने के लिए बजरी, रेत और चारकोल की परतों का उपयोग करें।",
     "step6Title": "भंडारण टैंक स्थापित करें",
     "step6Point1": "अपने छत क्षेत्र और स्थानीय वर्षा पैटर्न के आधार पर एक टैंक का आकार चुनें।",
-    "step6Point2": "शैवाल के विकास और मच्छरों के प्रजनन को रोकने के लिए टैंक को ढक कर रखें।"
+    "step6Point2": "शैवाल के विकास और मच्छरों के प्रजनन को रोकने के लिए टैंक को ढक कर रखें।",
+    "logInWithGoogle": "Google से लॉग इन करें",
+    "bestStructure": "सर्वोत्तम संरचना"
 }
