--- a/lib/l10n/app_gu.arb
+++ b/lib/l10n/app_gu.arb
@@ -117,5 +117,6 @@
   "step6Title": "સંગ્રહ ટાંકી સ્થાપિત કરો",
   "step6Point1": "તમારા છત વિસ્તાર અને સ્થાનિક વરસાદની પેટર્નના આધારે ટાંકીનું કદ પસંદ કરો.",
   "step6Point2": "શેવાળની વૃદ્ધિ અને મચ્છરના પ્રજનનને રોકવા માટે ટાંકીને ઢાંકી રાખો.",
-  "getVendor": "વિક્રેતા શોધો"
+  "getVendor": "વિક્રેતા શોધો",
+  "bestStructure": "શ્રેષ્ઠ માળખું"
 }
