--- a/lib/l10n/app_kn.arb
+++ b/lib/l10n/app_kn.arb
@@ -117,5 +117,6 @@
   "step6Title": "ಸಂಗ್ರಹಣಾ ಟ್ಯಾಂಕ್ ಅನ್ನು ಸ್ಥಾಪಿಸಿ",
   "step6Point1": "ನಿಮ್ಮ ಛಾವಣಿಯ ಪ್ರದೇಶ ಮತ್ತು ಸ್ಥಳೀಯ ಮಳೆ ಮಾದರಿಗಳ ಆಧಾರದ ಮೇಲೆ ಟ್ಯಾಂಕ್ ಗಾತ್ರವನ್ನು ಆರಿಸಿ.",
   "step6Point2": "ಪಾಚಿಗಳ ಬೆಳವಣಿಗೆ ಮತ್ತು ಸೊಳ್ಳೆಗಳ ಸಂತಾನೋತ್ಪತ್ತಿಯನ್ನು ತಡೆಯಲು ಟ್ಯಾಂಕ್ ಅನ್ನು ಮುಚ್ಚಿಡಿ.",
-  "getVendor": "ಮಾರಾಟಗಾರರನ್ನು ಹುಡುಕಿ"
+  "getVendor": "ಮಾರಾಟಗಾರರನ್ನು ಹುಡುಕಿ",
+  "bestStructure": "ಅತ್ಯುತ್ತಮ ರಚನೆ"
 }
