Initial commit with vendor screen and WhatsApp integration

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -119,5 +119,6 @@
     "step6Point1": "Choose a tank size based on your rooftop area and local rainfall patterns.",
     "step6Point2": "Ensure the tank is covered to prevent algae growth and mosquito breeding.",
     "logInWithGoogle": "Log in with Google",
-    "bestStructure": "Best Structure"
+    "bestStructure": "Best Structure",
+    "messageWhatsApp": "Message via WhatsApp"
 }
