--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -119,5 +119,7 @@
     "step6Point1": "अपने छत क्षेत्र और स्थानीय वर्षा पैटर्न के आधार पर एक टैंक का आकार चुनें।",
     "step6Point2": "शैवाल के विकास और मच्छरों के प्रजनन को रोकने के लिए टैंक को ढक कर रखें।",
     "logInWithGoogle": "Google से लॉग इन करें",
-    "bestStructure": "सर्वोत्तम संरचना"
+    "bestStructure": "सर्वोत्तम संरचना",
+    "messageWhatsApp": "व्हाट्सएप के माध्यम से संदेश भेजें"
+
 }
