--- a/lib/l10n/app_kn.arb
+++ b/lib/l10n/app_kn.arb
@@ -118,5 +118,7 @@
   "step6Point1": "ನಿಮ್ಮ ಛಾವಣಿಯ ಪ್ರದೇಶ ಮತ್ತು ಸ್ಥಳೀಯ ಮಳೆ ಮಾದರಿಗಳ ಆಧಾರದ ಮೇಲೆ ಟ್ಯಾಂಕ್ ಗಾತ್ರವನ್ನು ಆರಿಸಿ.",
   "step6Point2": "ಪಾಚಿಗಳ ಬೆಳವಣಿಗೆ ಮತ್ತು ಸೊಳ್ಳೆಗಳ ಸಂತಾನೋತ್ಪತ್ತಿಯನ್ನು ತಡೆಯಲು ಟ್ಯಾಂಕ್ ಅನ್ನು ಮುಚ್ಚಿಡಿ.",
   "getVendor": "ಮಾರಾಟಗಾರರನ್ನು ಹುಡುಕಿ",
-  "bestStructure": "ಅತ್ಯುತ್ತಮ ರಚನೆ"
+  "bestStructure": "ಅತ್ಯುತ್ತಮ ರಚನೆ",
+  "messageWhatsApp": "ವಾಟ್ಸಾಪ್ ಮೂಲಕ ಸಂದೇಶ ಕಳುಹಿಸಿ"
+
 }
