--- a/lib/l10n/app_mr.arb
+++ b/lib/l10n/app_mr.arb
@@ -118,5 +118,7 @@
   "step6Point1": "आपल्या छताच्या क्षेत्रावर आणि स्थानिक पर्जन्यमानावर आधारित टाकीचा आकार निवडा.",
   "step6Point2": "शैवाल वाढ आणि डासांची पैदास रोखण्यासाठी टाकी झाकून ठेवा.",
   "getVendor": "विक्रेता शोधा",
-  "bestStructure": "सर्वोत्तम रचना"
+  "bestStructure": "सर्वोत्तम रचना",
+  "messageWhatsApp": "व्हॉट्सअॅपद्वारे संदेश पाठवा"
+
 }
