--- a/lib/l10n/app_ta.arb
+++ b/lib/l10n/app_ta.arb
@@ -117,5 +117,7 @@
   "step6Point1": "உங்கள் கூரை பகுதி மற்றும் உள்ளூர் மழைப்பொழிவு முறைகளின் அடிப்படையில் ஒரு தொட்டியின் அளவைத் தேர்ந்தெடுக்கவும்.",
   "step6Point2": "பாசி வளர்ச்சி மற்றும் கொசு இனப்பெருக்கத்தைத் தடுக்க தொட்டியை மூடி வைக்கவும்.",
   "getVendor": "விற்பனையாளரைக் கண்டறியவும்",
-  "bestStructure": "சிறந்த கட்டமைப்பு"
+  "bestStructure": "சிறந்த கட்டமைப்பு",
+  "messageWhatsApp": "வாட்ஸ்அப்பில் செய்தி அனுப்பவும்"
+
 }
