--- a/lib/l10n/app_te.arb
+++ b/lib/l10n/app_te.arb
@@ -118,5 +118,7 @@
   "step6Point1": "మీ పైకప్పు ప్రాంతం మరియు స్థానిక వర్షపాత నమూనాల ఆధారంగా ట్యాంక్ పరిమాణాన్ని ఎంచుకోండి.",
   "step6Point2": "ఆల్గే పెరుగుదల మరియు దోమల పునరుత్పత్తిని నివారించడానికి ట్యాంక్‌ను కప్పి ఉంచండి.",
   "getVendor": "విక్రేతను కనుగొనండి",
-  "bestStructure": "ఉత్తమ నిర్మాణం"
+  "bestStructure": "ఉత్తమ నిర్మాణం",
+  "messageWhatsApp": "వాట్సాప్ ద్వారా సందేశం పంపండి"
+
 }
