--- a/lib/l10n/app_bn.arb
+++ b/lib/l10n/app_bn.arb
@@ -118,5 +118,7 @@
   "step6Point1": "আপনার ছাদের ক্ষেত্রফল এবং স্থানীয় বৃষ্টিপাতের ধরনের উপর ভিত্তি করে একটি ট্যাঙ্কের আকার চয়ন করুন।",
   "step6Point2": "শৈবালের বৃদ্ধি এবং মশা প্রজনন রোধ করতে ট্যাঙ্কটি ঢেকে রাখুন।",
   "getVendor": "ভেন্ডার খুঁজুন",
-  "bestStructure": "শ্রেষ্ঠ কাঠামো"
+  "bestStructure": "শ্রেষ্ঠ কাঠামো",
+  "messageWhatsApp": "হোয়াটসঅ্যাপের মাধ্যমে বার্তা পাঠান"
+
 }
