--- a/lib/l10n/app_gu.arb
+++ b/lib/l10n/app_gu.arb
@@ -118,5 +118,7 @@
   "step6Point1": "તમારા છત વિસ્તાર અને સ્થાનિક વરસાદની પેટર્નના આધારે ટાંકીનું કદ પસંદ કરો.",
   "step6Point2": "શેવાળની વૃદ્ધિ અને મચ્છરના પ્રજનનને રોકવા માટે ટાંકીને ઢાંકી રાખો.",
   "getVendor": "વિક્રેતા શોધો",
-  "bestStructure": "શ્રેષ્ઠ માળખું"
+  "bestStructure": "શ્રેષ્ઠ માળખું",
+  "messageWhatsApp": "વોટ્સએપ દ્વારા સંદેશ મોકલો"
+
 }
